syntax = "proto3";
package DomainServices.CodebookService.v1;
option csharp_namespace = "DomainServices.CodebookService.Contracts.v1";

import "GrpcDate.proto";

message GetBankingDaysRequest {
	cis.types.GrpcDate DateFrom = 1;
	cis.types.GrpcDate DateTo = 2;
}

message GetBankingDaysResponse {
	repeated cis.types.GrpcDate NonBankingDays = 1;
}
